--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -227,6 +227,18 @@
   <div class="scroll-up">
       <a href="#card-1"><i class="fas fa-arrow-circle-up fa-4x sc-pink"></i></a>
   </div>
+  <div style="width: 400px; height: 400px; border: 1px solid pink;">
+    <%
+      nodes = @doc.xpath("//div[@class='top-article-title']")
+      # @doc.xpath("//div[@class='top-article-title'] a").each do |node|
+      nodes.each do |node|
+      # @doc.css(".top-article-title a").each do |link| 
+        # concat simple_format(h(link["href"]))
+        title = node.css('a').inner_text
+        titles.push(title)
+      end
+    %>
+  </div
 </footer>
 
 <script>
