--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -1,4 +1,6 @@
+<%# header.nav template %>
 <%= render 'shared/nav' %>
+
 <main>
     <div class="row">
         <div class="card hoverable col s4" id="card-1">
@@ -172,6 +174,8 @@
         </div>
     </div>
 </main>
+<%# footer template %>
 <%= render 'shared/footer' %>
 
+<%# script template %>
 <%= render 'shared/script' %>
