--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,5 @@
 <footer>
+  <%= link_to 'お問い合わせ', purecolle_contact_index_path %>
   <div class="scroll-up">
       <a href="#card-1"><i class="fas fa-arrow-circle-up fa-4x sc-pink"></i></a>
   </div>
