--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,10 +1,19 @@
+<style type="text/css">
+.circle {
+    background: #87befd;
+    width: 30px;
+    height: 30px !important;
+    border-radius: 50%;
+}
+</style>
+
 <header>
   <nav>
     <div class="nav-wrapper white" id="header">
       <div class="nav-left">
           <div id="nav-drawer">
               <input id="nav-input" type="checkbox" class="nav-unshown">
-              <label id="nav-open" for="nav-input"><i class="material-icons material-icons-menu">menu</i></label>
+              <label id="nav-open" for="nav-input"><i class="material-icons material-icons-menu circle">menu</i></label>
               <label class="van-unshown" id="nav-close" for="nav-input"></label>
               <div id="nav-content">
                   <ul>
