--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -175,7 +175,7 @@
     </div>
 </main>
 <%# footer template %>
-<%= render 'shared/footer' %>
+<%= render 'shared/scroll' %>
 
 <%# script template %>
 <%= render 'shared/script' %>
