--- a/app/views/purecolle/about.html.erb
+++ b/app/views/purecolle/about.html.erb
@@ -54,4 +54,8 @@
       </div>
     </div>
   </div>
+
+<%= render 'shared/scroll' %>
+<%= render 'shared/footer' %>
+<%= render 'shared/script' %>
         
