--- a/app/views/purecolle/contact.html.erb
+++ b/app/views/purecolle/contact.html.erb
@@ -53,4 +53,7 @@
       </div>
     </div>
   </div>
-        
+
+<%= render 'shared/scroll' %>
+<%= render 'shared/footer' %>
+<%= render 'shared/script' %>
