--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -174,8 +174,7 @@
         </div>
     </div>
 </main>
-<%# footer template %>
-<%= render 'shared/scroll' %>
 
-<%# script template %>
+<%= render 'shared/scroll' %>
+<%= render 'shared/footer' %>
 <%= render 'shared/script' %>
