--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,15 +1,7 @@
-<footer>
-  <div class="scroll-up">
-      <a href="#"><i class="fas fa-arrow-circle-up fa-4x sc-pink"></i></a>
+<footer class="page-footer">
+  <div class="footer-copyright">
+    <div class="container">
+    Copyright &copy; 2018-2018 PureColle
+    </div>
   </div>
-    <%
-      nodes = @doc.xpath("//div[@class='top-article-title']")
-      # @doc.xpath("//div[@class='top-article-title'] a").each do |node|
-      nodes.each do |node|
-      # @doc.css(".top-article-title a").each do |link| 
-        # concat simple_format(h(link["href"]))
-        title = node.css('a').inner_text
-        titles.push(title)
-      end
-    %>
 </footer>
