--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,3 @@
-<footer class="page-footer">
-  <div class="footer-copyright">
-    <div class="container">
-    Copyright &copy; 2018-2018 PureColle
-    </div>
-  </div>
+<footer class="page-footer pink lighten-4">
+  Copyright &copy; 2018-2018 PureColle
 </footer>
