--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -115,13 +115,15 @@
                 </div>
             </a>
         </div>
-        <div class="card hoverable col s4">
+        <div class="card medium hoverable col s4">
             <a href="http://otanews.livedoor.biz/archives/52091405.html" target="_blank">
                 <div class="card-image waves-effect waves-block waves-light">
                   <%= image_tag 'article/img/test8.jpg', :alt=>'画像8', :class=>'activator' %>                    
                 </div>
                 <div class="card-content">
                     <span class="card-title activator grey-text text-darken-4">『HUGっと！プリキュア』7話感想 やりたいことに悩むさあや！ルールーちゃんのバンク気合入ってる！</span>
+                </div>
+                <div class="card-action">
                     <p><a href="http://otanews.livedoor.biz/" target="_blank">萌えオタニュース速報</a></p>
                 </div>
             </a>
@@ -173,6 +175,30 @@
             </a>
         </div>
     </div>
+            <div class="row">
+          <div class="col s12 m7">
+            <h5>Medium</h5>
+            <div class="card medium">
+              <div class="card-image">
+                <img src="images/sample-1.jpg">
+                <span class="card-title">Card Title</span>
+              </div>
+              <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+              </div>
+              <div class="card-action">
+                <a href="#">This is a link</a>
+                <a href="#">This is a link</a>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m5">
+            <br><br>
+            <p class="caption">
+             The Medium Card limits the height of the card to 400px.
+            </p>
+          </div>
+        </div>
 </main>
 
 <%= render 'shared/scroll' %>
