--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -175,30 +175,85 @@
             </a>
         </div>
     </div>
-            <div class="row">
-          <div class="col s12 m7">
-            <h5>Medium</h5>
-            <div class="card medium">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <span class="card-title">Card Title</span>
-              </div>
-              <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
-                <a href="#">This is a link</a>
-              </div>
+    <div class="row" style="width: 90%;">
+        <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+            <div class="card-image waves-effect waves-block waves-light">
+                <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
             </div>
-          </div>
-          <div class="col s12 m5">
-            <br><br>
-            <p class="caption">
-             The Medium Card limits the height of the card to 400px.
-            </p>
-          </div>
+            <div class="card-content">
+                <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+            </div>
+            <div class="card-action">
+                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
+            </div>
         </div>
+        <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+            <div class="card-image waves-effect waves-block waves-light">
+                <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+            </div>
+            <div class="card-content">
+                <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+            </div>
+            <div class="card-action">
+                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
+            </div>
+        </div>
+        <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+            <div class="card-image waves-effect waves-block waves-light">
+                <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+            </div>
+            <div class="card-content">
+                <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+            </div>
+            <div class="card-action">
+                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
+            </div>
+        </div>
+        <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+            <div class="card-image waves-effect waves-block waves-light">
+                <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+            </div>
+            <div class="card-content">
+                <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+            </div>
+            <div class="card-action">
+                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
+            </div>
+        </div>
+        <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+            <div class="card-image waves-effect waves-block waves-light">
+                <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+            </div>
+            <div class="card-content">
+                <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+            </div>
+            <div class="card-action">
+                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
+            </div>
+        </div>
+        <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+            <div class="card-image waves-effect waves-block waves-light">
+                <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+            </div>
+            <div class="card-content">
+                <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+            </div>
+            <div class="card-action">
+                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
+            </div>
+        </div>
+        <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+            <div class="card-image waves-effect waves-block waves-light">
+                <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+            </div>
+            <div class="card-content">
+                <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+            </div>
+            <div class="card-action">
+                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
+            </div>
+        </div>
+    </div>
 </main>
 
 <%= render 'shared/scroll' %>
