--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -1,4 +1,3 @@
-<%# header.nav template %>
 <%= render 'shared/nav' %>
 
 <main>
@@ -175,8 +174,9 @@
             </a>
         </div>
     </div>
-    <div class="row" style="width: 90%;">
+    <div class="row" style="width: 95%;">
         <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+            <a href="http://nizigami.com/archives/51700244.html" target="_blank">
             <div class="card-image waves-effect waves-block waves-light">
                 <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
             </div>
@@ -186,6 +186,7 @@
             <div class="card-action">
                 <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
             </div>
+            </a>
         </div>
         <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
             <div class="card-image waves-effect waves-block waves-light">
