--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -251,7 +251,7 @@
                 <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
             </div>
             <div class="card-action">
-                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
+                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a>
             </div>
         </div>
     </div>
