--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -1,181 +1,8 @@
 <%= render 'shared/nav' %>
 
 <main>
-    <div class="row">
-        <div class="card hoverable col s4" id="card-1">
-            <div class="card-image waves-effect waves-block waves-light">
-              <%= image_tag 'article/img/test1.jpg', :alt=>'画像１', :class=>'activator' %>
-            </div>
-            <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">プリキュアに別れ話を切り出したときの反応ｗｗｗｗｗｗｗｗｗ</span>
-                <p><a href="#">虹神速報</a></p>
-            </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-            </div>
-        </div>
-        <div class="card hoverable col s4">
-            <div class="card-image waves-effect waves-block waves-light">
-            <%= image_tag 'article/img/test2.jpg', :alt=>'画像2', :class=>'activator' %>
-            </div>
-            <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">「HUGっと!プリキュア」が歴代最高傑作という風潮ｗｗｗ</span>
-            <p><a href="#">にぃちゃん、まとめるよ速報</a></p>
-            </div>
-        </div>
-        <div class="card hoverable col s4">
-            <div class="card-image waves-effect waves-block waves-light">
-            <%= image_tag 'article/img/test3.jpg', :alt=>'画像3', :class=>'activator' %>
-            </div>
-            <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4">プリキュアに援交してるか聞いた時の反応ｗｗｗｗｗｗｗｗ</span>
-            <p><a href="#">虹神速報</a></p>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="card hoverable col s4">
-            <div class="card-image waves-effect waves-block waves-light">
-              <%= image_tag 'article/img/test4.jpg', :alt=>'画像4', :class=>'activator' %>
-            </div>
-            <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">【HUGっと！プリキュア】第5話 感想 羽生選手もビックリの大ジャンプ</span>
-                <p><a href="#">あにこ便</a></p>
-            </div>
-        </div>
-        <div class="card hoverable col s4">
-            <a href="http://tarosoku.com/?p=67301" target="_blank">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <%= image_tag 'article/img/test5.jpg', :alt=>'画像5', :class=>'activator' %>
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">【HUGっと！プリキュア】第8話「ほまれ脱退！？スケート王子が急接近！」感想・キャプまとめ</span>
-                    <p><a href="http://tarosoku.com/" target="_blank">たろそく</a></p>
-                </div>
-            </a>
-        </div>
-        <div class="card hoverable col s4">
-            <a href="http://tarosoku.com/?p=67301" target="_blank">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <%= image_tag 'article/img/test5.jpg', :alt=>'画像5', :class=>'activator' %>
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">【HUGっと！プリキュア】第8話「ほまれ脱退！？スケート王子が急接近！」感想・キャプまとめ</span>
-                    <p><a href="http://tarosoku.com/" target="_blank">たろそく</a></p>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="card hoverable col s4">
-            <a href="http://tarosoku.com/?p=67301" target="_blank">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <%= image_tag 'article/img/test5.jpg', :alt=>'画像5', :class=>'activator' %>
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">【HUGっと！プリキュア】第8話「ほまれ脱退！？スケート王子が急接近！」感想・キャプまとめ</span>
-                    <p><a href="http://tarosoku.com/" target="_blank">たろそく</a></p>
-                </div>
-            </a>
-        </div>
-        <div class="card hoverable col s5">
-            <a href="http://moyugenn.youblog.jp/archives/30620621.html" target="_blank">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <%= image_tag 'article/img/test6.jpg', :alt=>'画像6', :class=>'activator' %>                     
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">《HUGっと！プリキュア》8話感想・画像 ほまれちゃんをモスクワに誘うアンリ</span>
-                    <p><a href="http://moyugenn.youblog.jp/" target="_blank">もゆげん-萌癒元-</a></p>
-                </div>
-            </a>
-        </div>
-        <div class="card hoverable col s4">
-            <a href="http://aaieba.livedoor.biz/archives/53188429.html" target="_blank">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <%= image_tag 'article/img/test7.jpg', :alt=>'画像7', :class=>'activator' %>                    
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">『HUGっと！プリキュア』8話感想 人生に無駄な時間はない（渋滞は除く）</span>
-                    <p><a href="http://aaieba.livedoor.biz/" target="_blank">ああ言えばForYou</a></p>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="card hoverable col s4">
-            <a href="http://aaieba.livedoor.biz/archives/53188429.html" target="_blank">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <%= image_tag 'article/img/test7.jpg', :alt=>'画像7', :class=>'activator' %>                    
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">『HUGっと！プリキュア』8話感想 人生に無駄な時間はない（渋滞は除く）</span>
-                    <p><a href="http://aaieba.livedoor.biz/" target="_blank">ああ言えばForYou</a></p>
-                </div>
-            </a>
-        </div>
-        <div class="card medium hoverable col s4">
-            <a href="http://otanews.livedoor.biz/archives/52091405.html" target="_blank">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <%= image_tag 'article/img/test8.jpg', :alt=>'画像8', :class=>'activator' %>                    
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">『HUGっと！プリキュア』7話感想 やりたいことに悩むさあや！ルールーちゃんのバンク気合入ってる！</span>
-                </div>
-                <div class="card-action">
-                    <p><a href="http://otanews.livedoor.biz/" target="_blank">萌えオタニュース速報</a></p>
-                </div>
-            </a>
-        </div>
-        <div class="card hoverable col s4">
-            <a href="http://moyugenn.youblog.jp/archives/30588691.html" target="_blank">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <%= image_tag 'article/img/test9.jpg', :alt=>'画像9', :class=>'activator' %>                    
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">《HUGっと！プリキュア》のキューティーフィギュア買ったけど・・・</span>
-                    <p><a href="http://moyugenn.youblog.jp/" target="_blank">もゆげん-萌癒元-</a></p>
-                </div>
-            </a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="card hoverable col s4">
-            <a href="http://anicobin.ldblog.jp/archives/53151518.html" target="_blank">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <%= image_tag 'article/img/test11.jpg', :alt=>'画像11', :class=>'activator' %>                    
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">【HUGっと！プリキュア】第7話 感想 誰だおまえ！！</span>
-                    <p><a href="http://anicobin.ldblog.jp/" target="_blank">あにこ便</a></p>
-                </div>
-            </a>
-        </div>
-        <div class="card hoverable col s4">
-            <a href="http://aaieba.livedoor.biz/archives/53146411.html" target="_blank">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <%= image_tag 'article/img/test12.jpg', :alt=>'画像12', :class=>'activator' %>
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">プリキュア映画最新作に初代プリキュアが登場ｗｗｗｗｗｗｗｗｗ</span>
-                    <p><a href="http://aaieba.livedoor.biz/" target="_blank">ああ言えばForYou</a></p>
-                </div>
-            </a>
-        </div>
-        <div class="card hoverable col s4">
-            <a href="http://nizigami.com/archives/51700244.html" target="_blank">
-                <div class="card-image waves-effect waves-block waves-light">
-                  <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>                    
-                </div>
-                <div class="card-content">
-                    <span class="card-title activator grey-text text-darken-4">プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</span>
-                    <p><a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
-                </div>
-            </a>
-        </div>
-    </div>
     <div class="row" style="width: 95%;">
-        <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+        <div class="card medium hoverable col s4 card-margin">
             <a href="http://nizigami.com/archives/51700244.html" target="_blank">
             <div class="card-image waves-effect waves-block waves-light">
                 <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
@@ -244,6 +71,7 @@
             </div>
         </div>
         <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+            <a href="http://nizigami.com/archives/51700244.html" target="_blank">
             <div class="card-image waves-effect waves-block waves-light">
                 <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
             </div>
@@ -253,6 +81,7 @@
             <div class="card-action">
                 <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a>
             </div>
+            </a>
         </div>
     </div>
 </main>
