--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -360,12 +360,19 @@ nav .input-field label i {
   cursor: pointer;
 }
 .card-action a {
+    margin: 0 !important;
     font-size: 13px;
     color: rgba(76, 87, 102, 0.5) !important;
 }
 .card-action a:hover {
     color: #f06292 !important;
     border-bottom: 1px solid #f06292;
+}
+.card-content p {
+    color: black !important;
+}
+.card-margin {
+    margin: 30px 10px 0 10px !important;
 }
 
 
