--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -15,7 +15,7 @@
             </div>
             </a>
         </div>
-        <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+        <div class="card medium hoverable col s4 card-margin">
             <div class="card-image waves-effect waves-block waves-light">
                 <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
             </div>
@@ -26,7 +26,7 @@
                 <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
             </div>
         </div>
-        <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+        <div class="card medium hoverable col s4 card-margin">
             <div class="card-image waves-effect waves-block waves-light">
                 <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
             </div>
@@ -37,7 +37,7 @@
                 <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
             </div>
         </div>
-        <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+        <div class="card medium hoverable col s4 card-margin">
             <div class="card-image waves-effect waves-block waves-light">
                 <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
             </div>
@@ -48,7 +48,7 @@
                 <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
             </div>
         </div>
-        <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+        <div class="card medium hoverable col s4 card-margin">
             <div class="card-image waves-effect waves-block waves-light">
                 <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
             </div>
@@ -59,7 +59,7 @@
                 <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
             </div>
         </div>
-        <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
+        <div class="card medium hoverable col s4 card-margin">
             <div class="card-image waves-effect waves-block waves-light">
                 <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
             </div>
@@ -70,17 +70,17 @@
                 <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
             </div>
         </div>
-        <div class="card medium hoverable col s4" style="margin: 30px 10px 0 10px;">
-            <a href="http://nizigami.com/archives/51700244.html" target="_blank">
-            <div class="card-image waves-effect waves-block waves-light">
-                <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
-            </div>
-            <div class="card-content">
-                <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
-            </div>
-            <div class="card-action">
-                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a>
-            </div>
+        <div class="card medium hoverable col s4 card-margin">
+            <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+                </div>
+                <div class="card-content">
+                    <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+                </div>
+                <div class="card-action">
+                    <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a>
+                </div>
             </a>
         </div>
     </div>
