--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -3,72 +3,82 @@
 <main>
     <div class="row" style="width: 95%;">
         <div class="card medium hoverable col s4 card-margin">
-            <a href="http://nizigami.com/archives/51700244.html" target="_blank">
-            <div class="card-image waves-effect waves-block waves-light">
-                <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
-            </div>
-            <div class="card-content">
-                <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
-            </div>
-            <div class="card-action">
-                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
-            </div>
+            <a href="http://anichil.com/archives/1070252769.html" target="_blank" class="test">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <%= image_tag 'article/img/test1.jpg', :alt=>'画像13', :class=>'activator' %>
+                </div>
+                <div class="card-content">
+                    <p>独身男性が1人でプリキュア映画見に行くのってキモい？</p>
+                </div>
+                <div class="card-action">
+                    <a href="http://anichil.com/" target="_blank">あにちる速報</a>
+                </div>
             </a>
         </div>
         <div class="card medium hoverable col s4 card-margin">
-            <div class="card-image waves-effect waves-block waves-light">
-                <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
-            </div>
-            <div class="card-content">
-                <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
-            </div>
-            <div class="card-action">
-                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
-            </div>
+            <a href="http://anicobin.ldblog.jp/archives/53190201.html" target="_blank" class="test">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <%= image_tag 'article/img/test2.jpg', :alt=>'画像13', :class=>'activator' %>
+                </div>
+                <div class="card-content">
+                    <p>【HUGっと！プリキュア】第8話 感想 這いよる王子様</p>
+                </div>
+                <div class="card-action">
+                    <a href="http://anicobin.ldblog.jp/" target="_blank">虹神速報-にじそく</a>
+                </div>
+            </a>
         </div>
         <div class="card medium hoverable col s4 card-margin">
-            <div class="card-image waves-effect waves-block waves-light">
-                <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
-            </div>
-            <div class="card-content">
-                <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
-            </div>
-            <div class="card-action">
-                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
-            </div>
+            <a href="http://anicobin.ldblog.jp/archives/53190201.html" target="_blank" class="test">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <%= image_tag 'article/img/test2.jpg', :alt=>'画像13', :class=>'activator' %>
+                </div>
+                <div class="card-content">
+                    <p>【HUGっと！プリキュア】第8話 感想 這いよる王子様</p>
+                </div>
+                <div class="card-action">
+                    <a href="http://anicobin.ldblog.jp/" target="_blank">虹神速報-にじそく</a>
+                </div>
+            </a>
         </div>
         <div class="card medium hoverable col s4 card-margin">
-            <div class="card-image waves-effect waves-block waves-light">
-                <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
-            </div>
-            <div class="card-content">
-                <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
-            </div>
-            <div class="card-action">
-                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
-            </div>
+            <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+                </div>
+                <div class="card-content">
+                    <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+                </div>
+                <div class="card-action">
+                    <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a>
+                </div>
+            </a>
         </div>
         <div class="card medium hoverable col s4 card-margin">
-            <div class="card-image waves-effect waves-block waves-light">
-                <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
-            </div>
-            <div class="card-content">
-                <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
-            </div>
-            <div class="card-action">
-                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
-            </div>
+            <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+                </div>
+                <div class="card-content">
+                    <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+                </div>
+                <div class="card-action">
+                    <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a>
+                </div>
+            </a>
         </div>
         <div class="card medium hoverable col s4 card-margin">
-            <div class="card-image waves-effect waves-block waves-light">
-                <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
-            </div>
-            <div class="card-content">
-                <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
-            </div>
-            <div class="card-action">
-                <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a></p>
-            </div>
+            <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
+                <div class="card-image waves-effect waves-block waves-light">
+                    <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+                </div>
+                <div class="card-content">
+                    <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+                </div>
+                <div class="card-action">
+                    <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a>
+                </div>
+            </a>
         </div>
         <div class="card medium hoverable col s4 card-margin">
             <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
