--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,5 +1,8 @@
 @charset "utf-8";
 
+body {
+    color: rgba(0,0,0,0.87);
+}
 .container {
     width: 90%;
 }
@@ -369,6 +372,7 @@ nav .input-field label i {
     border-bottom: 1px solid #f06292;
 }
 .card-content p {
+    font-size: 15.5px;
     color: black !important;
 }
 .card-margin {
