--- a/app/assets/stylesheets/purecolle.scss
+++ b/app/assets/stylesheets/purecolle.scss
@@ -78,7 +78,8 @@ header {
     width: 100%;
 }
 body {
-    background-color: #fff9ff;
+    /*background-color: #fff9ff;*/
+    background-color: #f5f5f5;
     margin-top: 100px;
 }
 .nav-left {
