--- a/app/assets/stylesheets/purecolle.scss
+++ b/app/assets/stylesheets/purecolle.scss
@@ -49,20 +49,20 @@
 .nav-style {
     border: none;
     background-color: lightblue;
-    background-image : url(img/search.png);  /* 背景画像：虫眼鏡(*1)*/
-    background-repeat  : no-repeat;        /* 背景は繰り返さない  */
-    background-position: 8px center;       /* 背景の位置          */
-    background-size    : auto 60%;         /* 背景のサイズ        */
-    background-color   : #fff;             /* 背景色              */
-    margin             : 0 auto;           /* サンプルは中央寄せ  */
-    padding-left       : 30px;             /* 虫眼鏡分の左余白    */
-    border             : 2px solid #666;   /* 枠線　幅,実践,色    */
-    border-radius      : 6px;              /* 角丸                */
-    color              : #555;             /* 文字色              */
-    font-size          : 18px;             /* フォントサイズ      */
-    letter-spacing     : 0.1em;            /* 文字間隔            */
-    font-weight        : bold;             /* 太字                */
-    outline            : 0;                /* 入力薄枠を非表示    */
+    background-image : url(img/search.png);
+    background-repeat  : no-repeat;
+    background-position: 8px center;
+    background-size    : auto 60%;
+    background-color   : #fff;
+    margin             : 0 auto;
+    padding-left       : 30px;
+    border             : 2px solid #666;
+    border-radius      : 6px;
+    color              : #555;
+    font-size          : 18px;
+    letter-spacing     : 0.1em;
+    font-weight        : bold;
+    outline            : 0;
 }
 .nav-style:focus {
     background-color: #cfe7ff;
