--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -6,6 +6,7 @@
             <a href="http://anichil.com/archives/1070252769.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
                     <%= image_tag 'article/img/test1.jpg', :alt=>'画像13', :class=>'activator' %>
+                    <div class="img-top-triangle"></div>
                 </div>
                 <div class="card-content">
                     <p>独身男性が1人でプリキュア映画見に行くのってキモい？</p>
@@ -19,6 +20,7 @@
             <a href="http://anicobin.ldblog.jp/archives/53190201.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
                     <%= image_tag 'article/img/test2.jpg', :alt=>'画像13', :class=>'activator' %>
+                    <div class="img-top-triangle"></div>
                 </div>
                 <div class="card-content">
                     <p>【HUGっと！プリキュア】第8話 感想 這いよる王子様</p>
@@ -32,6 +34,7 @@
             <a href="http://anicobin.ldblog.jp/archives/53190201.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
                     <%= image_tag 'article/img/test2.jpg', :alt=>'画像13', :class=>'activator' %>
+                    <div class="img-top-triangle"></div>
                 </div>
                 <div class="card-content">
                     <p>【HUGっと！プリキュア】第8話 感想 這いよる王子様</p>
@@ -45,6 +48,7 @@
             <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
                     <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+                    <div class="img-top-triangle"></div>
                 </div>
                 <div class="card-content">
                     <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
