--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -31,16 +31,16 @@
             </a>
         </div>
         <div class="card medium hoverable col s4 card-margin">
-            <a href="http://anicobin.ldblog.jp/archives/53190201.html" target="_blank" class="test">
+            <a href="http://aaieba.livedoor.biz/archives/53146411.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test2.jpg', :alt=>'画像13', :class=>'activator' %>
+                    <%= image_tag 'article/img/test3.jpg', :alt=>'画像13', :class=>'activator' %>
                     <div class="img-top-triangle"></div>
                 </div>
                 <div class="card-content">
-                    <p>【HUGっと！プリキュア】第8話 感想 這いよる王子様</p>
+                    <p>プリキュア映画最新作に初代プリキュアが登場ｗｗｗｗｗｗｗｗｗ</p>
                 </div>
                 <div class="card-action">
-                    <a href="http://anicobin.ldblog.jp/" target="_blank">虹神速報-にじそく</a>
+                    <a href="http://aaieba.livedoor.biz/" target="_blank">ああ言えばForYou</a>
                 </div>
             </a>
         </div>
