--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -11,7 +11,7 @@
     border-style: solid;
     border-width: 28px 28px 0 0;
     /* border-color: #9b1156 transparent transparent transparent; */
-    border-color: skyblue transparent transparent transparent;
+    border-color: #ff6464 transparent transparent transparent;
     line-height: 1;
 
 
