--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,19 +1,10 @@
-<style type="text/css">
-.circle {
-    background: #87befd;
-    width: 30px;
-    height: 30px !important;
-    border-radius: 50%;
-}
-</style>
-
 <header>
   <nav>
     <div class="nav-wrapper white" id="header">
       <div class="nav-left">
           <div id="nav-drawer">
               <input id="nav-input" type="checkbox" class="nav-unshown">
-              <label id="nav-open" for="nav-input"><i class="material-icons material-icons-menu circle">menu</i></label>
+              <label id="nav-open" for="nav-input"><i class="material-icons material-icons-menu">menu</i></label>
               <label class="van-unshown" id="nav-close" for="nav-input"></label>
               <div id="nav-content">
                   <ul>
@@ -57,9 +48,9 @@
       <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
       <div class="material-header-middle">
           <form>
-              <div class="input-field nav-input-search" style="padding-top:4px;">
-                  <input id="search" type="search" placeholder="検索" required>
-                  <label class="label-icon i-search" for="search"><i class="material-icons">search</i></label>
+              <div class="input-field nav-input-search">
+                  <input id="search" type="search" placeholder="検索">
+                  <label class="label-icon i-search" for="search"><i class="material-icons search-icon">search</i></label>
               </div>
           </form>
       </div>
