--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -43,7 +43,7 @@
                   </ul>
               </div>
           </div>
-          <div class="logo"><a href="#" class="brand-logo"><%= image_tag 'title_logo', :alt => 'プリコレ！', :class => "title_img" %></a></div>
+          <div class="logo"><a href="#" class="brand-logo"><%= image_tag 'title_logo.png', :alt => 'プリコレ！', :class => "title_img" %></a></div>
       </div>
       <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
       <div class="material-header-middle">
