--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,45 @@
 <!DOCTYPE html>
+<!--
+
+                                                  .....................
+                                       ....ggMMMMMMMMMMY""""""""""MMMMMMMMMNggJ...
+                                ...gMMMMM""7^                               77T"MMMMNg.,.
+       `  `    `   `     ` ..+MMM#"7!                                               .7"WMMNa,.
+                       ..gMMB"'                                                           (7WMMgJ.
+                    .gMM#"`                                                                   .7WMMg,
+     `      `    .JMM"`                                                                           .TMMg,
+               .MMD'                                                                                 .TMN,
+        `    +MM=                                  `                                                    7WMa.
+           .MM3                                                              `                            (MN,
+     `   .dM"                     `            `                                                            TMm,
+        .MM^                              `                             `                                    ,MN.
+       .MM`               .        ..                                      `                                  ,MM.
+       MM^          jN,..dM%   ...dMN..-J,                               .gM#        (Nm         .gN,          (Mb
+      .MF          .dMMMMMMMe. ."TMMB""""!   ` `dM&.,     ...(JJ,    `.+MM#=         dM#         ,MM\           dM_
+      dM:         .MMMMgMM'dMb   dMMMMMN,       dM#"^    (MB"""WMb   ,MMN.           dM#         .MM{           .MF
+      dM:         .MN.MMM'.dMF    ?!  ,MN    .NMMMe,         ..JMF    (TMMN,          ?`          ?!            .MF
+      (M]          7MM#" dMMD    .MNNMMM=    dMgMM"MF      ,MMM9^        ?HMN<       dMF         .MM!           .M$
+      .MN                          `~          !`                           `                                  .M#`
+       JMb     `                                                                                               JM%
+        TMb                                                                                                   jMY
+         dMN.      `                                                                                        .MM$
+          .MMe                                                                                             .M#^
+     `      TMN,                                                                                         .MM"
+              "MNx        `      `        `                                  `                        ..MM"
+                ?HMN..              `          `                        `                          ..NM#=
+                   "MMNJ.                                                                       ..MM#"
+     `                ?WMNNJ.              `       `                                        ..gMMB=`
+        `                 ?TMF   `                                         `          ...gMMMB"`
+                            MM      `          `                        `      ...JNMMMM"=`
+           `                4M,          `       ......................JJJNNMMMM#9"^`
+     `                      (M]             ..gMM#""""MMMMMMMMMMMM#"""D"""``
+                            .M#         ..NMMB"`
+          `    `   `         MM_   ..+MMM9=
+                             dMi.+MM#"!
+     `                       .MM""`                             `
+
+     プリコレ！はHUGっと！プリキュアを応援しています。
+-->
 <html lang="ja">
   <head>
     <title>プリコレ！</title>
