--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -37,8 +37,7 @@
                         </li>
                       </div>
                       <div class="nav-menu-copy">
-                          <li><div class="copy-right">掲載されている記事や画像等の著作権は、<br>各権利所有者に帰属致します。</div></li>
-                          <li><div class="copy">Copyright &copy; 2018-2018 PureColle</div></li>
+                          <li><div class="copy">Copyright &copy;2018 PureColle</div></li>
                       </div>
                   </ul>
               </div>
