--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -118,15 +118,13 @@ body {
 }
 .copy {
     font-size: 10px;
-    float: right;
-    margin-right: 10px;
-    margin-top: -40px;
+    float: left;
+    margin-left: 12px;
+    margin-top: -8px;
 }
 .card {
     max-width: 323px;
     min-height: 390px;
-    /* height: 400px;
-    width: 400px; */
     margin: 0 50px;
 }
 .scroll-up {
@@ -432,4 +430,11 @@ input:-ms-input-placeholder {
 /* footer */
 .fa-arrow-circle-up:hover {
     color: #f5ccda;
+}
+.footer-padding {
+    padding-left: 16px;
+    padding-bottom: 7px;
+}
+.page-footer {
+    padding-top: 5px !important;
 }
