--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -59,41 +59,30 @@
             </a>
         </div>
         <div class="card medium hoverable col s4 card-margin">
-            <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
+            <a href="http://anicobin.ldblog.jp/archives/53233130.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+                    <%= image_tag 'article/img/test4.jpg', :alt=>'画像4', :class=>'activator' %>
+                    <div class="img-top-triangle"></div>
                 </div>
                 <div class="card-content">
-                    <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+                    <p>【HUGっと！プリキュア】第9話 感想 話の展開がぶっとびー</p>
                 </div>
                 <div class="card-action">
-                    <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a>
+                    <a href="http://anicobin.ldblog.jp/" target="_blank">あにこ便</a>
                 </div>
             </a>
         </div>
         <div class="card medium hoverable col s4 card-margin">
-            <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
+            <a href="http://aaieba.livedoor.biz/archives/53233533.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
+                    <%= image_tag 'article/img/test5.jpg', :alt=>'画像4', :class=>'activator' %>
+                    <div class="img-top-triangle"></div>
                 </div>
                 <div class="card-content">
-                    <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
+                    <p>ドラゴンボール超の孫悟空とプリキュアが夢の共演ｗｗｗｗｗｗｗｗｗ</p>
                 </div>
                 <div class="card-action">
-                    <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a>
-                </div>
-            </a>
-        </div>
-        <div class="card medium hoverable col s4 card-margin">
-            <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
-                </div>
-                <div class="card-content">
-                    <p>プリキュアに5000円で手でしてくれるか聞いた時の反応ｗｗｗｗｗｗｗ</p>
-                </div>
-                <div class="card-action">
-                    <a href="http://nizigami.com/" target="_blank">虹神速報-にじそく</a>
+                    <a href="http://aaieba.livedoor.biz/" target="_blank">ああ言えばForYou</a>
                 </div>
             </a>
         </div>
