--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,8 +46,10 @@
     <%= csrf_meta_tags %>
 
     <meta charset="utf-8">
+    <meta content='IE=edge' http-equiv='X-UA-Compatible'>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="プリコレ！はプリキュアのまとめサイトアンテナです。各まとめサイトのプリキュアに関する記事を閲覧できます。"/>
+    <meta name="keywords" content="プリキュア,プリキュアまとめ,はぐぷり,precure,ぷりこれ,precolle">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
