--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -37,7 +37,7 @@
                         </li>
                       </div>
                       <div class="nav-menu-copy">
-                          <li><div class="copy">Copyright &copy;2018 PureColle</div></li>
+                          <li><div class="copy">&copy; 2018 PreColle</div></li>
                       </div>
                   </ul>
               </div>
