--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,3 +1,3 @@
 <footer class="page-footer pink lighten-4 footer-padding" style="font-size:13px;">
-  Copyright&copy; 2018 PreColle | 掲載されている記事や画像等の著作権は、各権利所有者に帰属します。
+  &copy; 2018 PreColle | 掲載されている記事や画像等の著作権は、各権利所有者に帰属します。
 </footer>
