--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -239,7 +239,6 @@ body {
 #nav-drawer {
   position: relative;
 }
-/*チェックボックス等は非表示に*/
 .nav-unshown {
   display: none;
 }
@@ -260,12 +259,11 @@ body {
 #nav-open span:after {
   bottom: -16px;
 }
-/*閉じる用の薄黒カバー*/
 #nav-close {
-display: none;/*はじめは隠しておく*/
+display: none;
 position: fixed;
 z-index: 99;
-top: 0;/*全体に広がるように*/
+top: 0;
 left: 0;
 width: 100%;
 height: 100%;
@@ -273,21 +271,19 @@ background: black;
 opacity: 0;
 transition: .3s ease-in-out;
 }
-
-/*中身*/
 #nav-content {
 overflow: auto;
 position: fixed;
 top: 0;
 left: 0;
 z-index: 9999;
-width: 90%;/*右側に隙間を作る（閉じるカバーを表示）*/
+width: 90%;
 max-width: 245px;
 height: 100%;
-background: #fff;/*背景色*/
-transition: .3s ease-in-out;/*滑らかに表示*/
+background: #fff;
+transition: .3s ease-in-out;
 -webkit-transform: translateX(-105%);
-transform: translateX(-105%);/*左に隠しておく*/
+transform: translateX(-105%);
 }
 #nav-content li {
   color: #212121;
@@ -303,15 +299,14 @@ transform: translateX(-105%);/*左に隠しておく*/
 #nav-open {
   padding-left: 20px;
 }
-/*チェックが入ったらもろもろ表示*/
 #nav-input:checked ~ #nav-close {
-display: block;/*カバーを表示*/
+display: block;
 opacity: .5;
 }
 
 #nav-input:checked ~ #nav-content {
 -webkit-transform: translateX(0%);
-transform: translateX(0%);/*中身を表示（右へスライド）*/
+transform: translateX(0%);
 box-shadow: 6px 0 25px rgba(0,0,0,.15);
 }
 .nav-icon {
