--- a/app/views/purecolle/index.html.erb
+++ b/app/views/purecolle/index.html.erb
@@ -1,44 +1,40 @@
-<style type="text/css">
-.test {
-    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-}
-
-</style>
-
 <%= render 'shared/nav' %>
 
 <main>
-    <div class="row" style="width: 80%; float: left;">
-        <div class="card medium hoverable col s4 card-margin">
-            <a href="http://anichil.com/archives/1070252769.html" target="_blank" class="test">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test1.jpg', :alt=>'画像13', :class=>'activator' %>
-                    <div class="img-top-triangle"></div>
-                </div>
-                <div class="card-content">
-                    <p>独身男性が1人でプリキュア映画見に行くのってキモい？</p>
-                </div>
-                <div class="card-action">
-                    <a href="http://anichil.com/" target="_blank">あにちる速報</a>
-                </div>
-            </a>
+    <div class="row col-sm-12 col-sm-8" style="float: left;">
+        <div style="margin: 0 15px;">
+            <div class="card medium hoverable col s4 card-margin col-sm-6">
+                <a href="http://anichil.com/archives/1070252769.html" target="_blank" class="test">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <%= image_tag 'article/img/test1.jpg', :alt=>'画像13', :class=>'activator' %>
+                        <div class="img-top-triangle"></div>
+                    </div>
+                    <div class="card-content">
+                        <p>独身男性が1人でプリキュア映画見に行くのってキモい？</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="http://anichil.com/" target="_blank">あにちる速報</a>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="card medium hoverable col s4 card-margin">
-            <a href="http://anicobin.ldblog.jp/archives/53190201.html" target="_blank" class="test">
-                <div class="card-image waves-effect waves-block waves-light">
-                    <%= image_tag 'article/img/test2.jpg', :alt=>'画像13', :class=>'activator' %>
-                    <div class="img-top-triangle"></div>
-                </div>
-                <div class="card-content">
-                    <p>【HUGっと！プリキュア】第8話 感想 這いよる王子様</p>
-                </div>
-                <div class="card-action">
-                    <a href="http://anicobin.ldblog.jp/" target="_blank">虹神速報-にじそく</a>
-                </div>
-            </a>
+        <div style="margin: 0 15px;">
+            <div class="card medium hoverable col s4 card-margin col-sm-6">
+                <a href="http://anicobin.ldblog.jp/archives/53190201.html" target="_blank" class="test">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <%= image_tag 'article/img/test2.jpg', :alt=>'画像13', :class=>'activator' %>
+                        <div class="img-top-triangle"></div>
+                    </div>
+                    <div class="card-content">
+                        <p>【HUGっと！プリキュア】第8話 感想 這いよる王子様</p>
+                    </div>
+                    <div class="card-action">
+                        <a href="http://anicobin.ldblog.jp/" target="_blank">虹神速報-にじそく</a>
+                    </div>
+                </a>
+            </div>
         </div>
-        <div class="card medium hoverable col s4 card-margin">
+        <div class="card medium hoverable col s4 card-margin col-sm-6">
             <a href="http://aaieba.livedoor.biz/archives/53146411.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
                     <%= image_tag 'article/img/test3.jpg', :alt=>'画像13', :class=>'activator' %>
@@ -52,7 +48,7 @@
                 </div>
             </a>
         </div>
-        <div class="card medium hoverable col s4 card-margin">
+        <div class="card medium hoverable col s4 card-margin col-sm-6">
             <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
                     <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
@@ -66,7 +62,7 @@
                 </div>
             </a>
         </div>
-        <div class="card medium hoverable col s4 card-margin">
+        <div class="card medium hoverable col s4 card-margin col-sm-6">
             <a href="http://anicobin.ldblog.jp/archives/53233130.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
                     <%= image_tag 'article/img/test4.jpg', :alt=>'画像4', :class=>'activator' %>
@@ -80,7 +76,7 @@
                 </div>
             </a>
         </div>
-        <div class="card medium hoverable col s4 card-margin">
+        <div class="card medium hoverable col s4 card-margin col-sm-6">
             <a href="http://aaieba.livedoor.biz/archives/53233533.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
                     <%= image_tag 'article/img/test5.jpg', :alt=>'画像4', :class=>'activator' %>
@@ -94,7 +90,7 @@
                 </div>
             </a>
         </div>
-        <div class="card medium hoverable col s4 card-margin">
+        <div class="card medium hoverable col s4 card-margin col-sm-6">
             <a href="http://anichil.com/archives/1070252769.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
                     <%= image_tag 'article/img/test1.jpg', :alt=>'画像13', :class=>'activator' %>
@@ -108,7 +104,7 @@
                 </div>
             </a>
         </div>
-        <div class="card medium hoverable col s4 card-margin">
+        <div class="card medium hoverable col s4 card-margin col-sm-6">
             <a href="http://anicobin.ldblog.jp/archives/53190201.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
                     <%= image_tag 'article/img/test2.jpg', :alt=>'画像13', :class=>'activator' %>
@@ -122,7 +118,7 @@
                 </div>
             </a>
         </div>
-        <div class="card medium hoverable col s4 card-margin">
+        <div class="card medium hoverable col s4 card-margin col-sm-6">
             <a href="http://aaieba.livedoor.biz/archives/53146411.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
                     <%= image_tag 'article/img/test3.jpg', :alt=>'画像13', :class=>'activator' %>
@@ -136,7 +132,7 @@
                 </div>
             </a>
         </div>
-        <div class="card medium hoverable col s4 card-margin">
+        <div class="card medium hoverable col s4 card-margin col-sm-6">
             <a href="http://nizigami.com/archives/51700244.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
                     <%= image_tag 'article/img/test13.jpg', :alt=>'画像13', :class=>'activator' %>
@@ -150,7 +146,7 @@
                 </div>
             </a>
         </div>
-        <div class="card medium hoverable col s4 card-margin">
+        <div class="card medium hoverable col s4 card-margin col-sm-6">
             <a href="http://anicobin.ldblog.jp/archives/53233130.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
                     <%= image_tag 'article/img/test4.jpg', :alt=>'画像4', :class=>'activator' %>
@@ -164,7 +160,7 @@
                 </div>
             </a>
         </div>
-        <div class="card medium hoverable col s4 card-margin">
+        <div class="card medium hoverable col s4 card-margin col-sm-6">
             <a href="http://aaieba.livedoor.biz/archives/53233533.html" target="_blank" class="test">
                 <div class="card-image waves-effect waves-block waves-light">
                     <%= image_tag 'article/img/test5.jpg', :alt=>'画像4', :class=>'activator' %>
@@ -179,17 +175,9 @@
             </a>
         </div>
     </div>
-    <div class="row test" style="width:20%; float:left; margin-top:80px; margin-left:-50px;">
-        <a 
-            class="twitter-timeline" 
-            href="https://twitter.com/search?q=%23precure%20OR%20%E3%83%97%E3%83%AA%E3%82%AD%E3%83%A5%E3%82%A2%20OR%20%E3%83%8F%E3%82%B0%E3%83%97%E3%83%AA" 
-            data-widget-id="982648103302909954"
-            data-chrome="nofooter" 
-            width="380px"
-            height="500px">#precure OR プリキュア OR ハグプリに関するツイート
-        </a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-    </div>
+
+    <%= render 'shared/timeline'%>
+
 </main>
 
 <%= render 'shared/scroll' %>
